chore(docker): update init-db.sql path in docker-compose files and clean up commented development services
- Changed the path for init-db.sql in both docker-compose.dev.yml and docker-compose.yml to point to ./core/database/init-db.sql.
- Commented out the configuration for the XMPP web client and log viewer in docker-compose.dev.yml to streamline the development setup.
- Adjusted the PROJECT_DIR variable in dev-tools.sh for better path resolution.
- Added a new static HTML file for the XMPP development server landing page.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -105,7 +105,7 @@ services:
 
     volumes:
       - xmpp_postgres_data_dev:/var/lib/postgresql/data
-      - ./scripts/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
+      - ./core/database/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
 
     # Development PostgreSQL settings (lighter)
     command: >
@@ -223,37 +223,37 @@ services:
   # DEVELOPMENT TOOLS
   # ============================================================================
   
-  # XMPP Testing Client (Converse.js for web-based testing)
-  xmpp-webclient-dev:
-    image: nginx:alpine
-    container_name: xmpp-webclient-dev
-    hostname: xmpp-webclient-dev
-    restart: unless-stopped
-    ports:
-      - '8081:80'
-    volumes:
-      - ./dev-tools/webclient:/usr/share/nginx/html:ro
-      - ./dev-tools/nginx-webclient.conf:/etc/nginx/conf.d/default.conf:ro
-    networks:
-      - xmpp_network_dev
-    depends_on:
-      - xmpp-prosody-dev
+  # # XMPP Testing Client (Converse.js for web-based testing)
+  # xmpp-webclient-dev:
+  #   image: nginx:alpine
+  #   container_name: xmpp-webclient-dev
+  #   hostname: xmpp-webclient-dev
+  #   restart: unless-stopped
+  #   ports:
+  #     - '8081:80'
+  #   volumes:
+  #     - ./dev-tools/webclient:/usr/share/nginx/html:ro
+  #     - ./dev-tools/nginx-webclient.conf:/etc/nginx/conf.d/default.conf:ro
+  #   networks:
+  #     - xmpp_network_dev
+  #   depends_on:
+  #     - xmpp-prosody-dev
 
-  # Log viewer for development
-  xmpp-logs-dev:
-    image: amir20/dozzle:latest
-    container_name: xmpp-logs-dev
-    hostname: xmpp-logs-dev
-    restart: unless-stopped
-    ports:
-      - '8082:8080'
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    environment:
-      - DOZZLE_FILTER=name=xmpp-*-dev
-      - DOZZLE_NO_ANALYTICS=true
-    networks:
-      - xmpp_network_dev
+  # # Log viewer for development
+  # xmpp-logs-dev:
+  #   image: amir20/dozzle:latest
+  #   container_name: xmpp-logs-dev
+  #   hostname: xmpp-logs-dev
+  #   restart: unless-stopped
+  #   ports:
+  #     - '8082:8080'
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  #   environment:
+  #     - DOZZLE_FILTER=name=xmpp-*-dev
+  #     - DOZZLE_NO_ANALYTICS=true
+  #   networks:
+  #     - xmpp_network_dev
 
 # ============================================================================
 # DEVELOPMENT VOLUMES
