chore(docker): update logging level and improve LuaRocks configuration
- Changed PROSODY_LOG_LEVEL from debug to info in docker-compose.dev.yml for cleaner logs during development.
- Updated Dockerfile to fix LuaRocks manifest path issues, ensuring proper module management.
- Adjusted default_archive_policy in prosody.cfg.lua to "always" for better message archiving behavior.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,7 +25,7 @@ services:
       - PROSODY_DB_HOST=xmpp-postgres-dev
       - PROSODY_DB_PORT=5432
       # Development-specific settings
-      - PROSODY_LOG_LEVEL=debug
+      - PROSODY_LOG_LEVEL=info
       - PROSODY_ALLOW_REGISTRATION=true
       - PROSODY_DEVELOPMENT_MODE=true
 
