--- a/deployment/systemd/services/xmpp-cert-renewal.service
+++ b/deployment/systemd/services/xmpp-cert-renewal.service
@@ -4,6 +4,6 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=PROJECT_DIR/scripts/renew-certificates.sh
+ExecStart=PROJECT_DIR/prosody-manager cert renew
 User=USER_NAME
 Group=USER_NAME 
