refactor(docker-compose): comment out service dependency on xmpp-postgres
Removed the health check condition for the xmpp-postgres service in the docker-compose file by commenting out the `depends_on` section. This change simplifies the service dependency management and may improve startup behavior.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,9 +76,9 @@ services:
       nproc:
         soft: 32768
         hard: 32768
-    depends_on:
-      xmpp-postgres:
-        condition: service_healthy
+    # depends_on:
+    #   xmpp-postgres:
+    #     condition: service_healthy
     networks:
       - xmpp_network
 
