feat(config): support split XMPP domain vs service host via PROSODY_SERVICE_HOST\n\n- Advertise and host MUC/Upload/Proxy on service host (e.g., xmpp.atl.chat)\n- Keep XMPP domain (JID) as PROSODY_DOMAIN (e.g., atl.chat)\n- Update SSL paths and proxy65_address accordingly\n\ndocs(env): document PROSODY_SERVICE_HOST in env templates for split-domain setups

--- a/templates/env/env.dev.example
+++ b/templates/env/env.dev.example
@@ -12,6 +12,8 @@
 # Development domain (localhost friendly)
 # Users will have JIDs like: user@localhost, admin@localhost
 PROSODY_DOMAIN=localhost
+# Optionally separate service host (useful for dev when testing split domains)
+# PROSODY_SERVICE_HOST=localhost
 
 # Administrator JIDs (development)
 PROSODY_ADMINS=admin@localhost,dev@localhost
