--- a/templates/env/env.example
+++ b/templates/env/env.example
@@ -13,6 +13,11 @@
 # Use SRV records to delegate to xmpp.atl.chat for clean separation
 PROSODY_DOMAIN=atl.chat
 
+# If your HTTP endpoints/components should live on a different host than
+# the XMPP domain (e.g., xmpp.atl.chat), set this to that hostname.
+# Defaults to PROSODY_DOMAIN when unset.
+# PROSODY_SERVICE_HOST=xmpp.atl.chat
+
 # Administrator JIDs (comma-separated)
 # Use the same domain as PROSODY_DOMAIN
 PROSODY_ADMINS=admin@atl.chat
