feat(nginx): add dockerized reverse proxy for Prosody\n\n- New nginx service in prod and dev compose files\n- Docker-aware nginx config proxies WebSocket/BOSH/Upload/Admin/Metrics to xmpp-prosody\n- Mounts certs from ./.runtime/certs (prod) or ./certs-dev (dev)\n- Example config under templates/configs/nginx/nginx-docker.conf.example

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -224,6 +224,23 @@ services:
     networks:
       - xmpp_network_dev
 
+  # NGINX reverse proxy for local/dev testing on standard ports
+  xmpp-nginx-dev:
+    image: nginx:stable
+    container_name: xmpp-nginx-dev
+    hostname: xmpp-nginx-dev
+    restart: unless-stopped
+    ports:
+      - '8080:80'
+      - '8443:443'
+    volumes:
+      - ./deployment/reverse-proxy/nginx/nginx-docker.conf:/etc/nginx/nginx.conf:ro
+      - ./certs-dev:/opt/xmpp.atl.chat/certs:ro
+    depends_on:
+      xmpp-prosody:
+        condition: service_healthy
+    networks:
+      - xmpp_network_dev
   
 
 # ============================================================================
