--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -19,14 +19,6 @@ http {
     keepalive_timeout  65;
     types_hash_max_size 2048;
 
-    # Redirect HTTP to HTTPS for atl.chat
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name atl.chat;
-        return 301 https://$server_name$request_uri;
-    }
-
     # Redirect HTTP to HTTPS for xmpp.atl.chat
     server {
         listen 80;
@@ -41,8 +33,8 @@ http {
         listen [::]:443 ssl http2;
         server_name xmpp.atl.chat;
 
-        ssl_certificate /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem;
-        ssl_certificate_key /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem;
+        ssl_certificate /opt/xmpp.atl.chat/certs/live/xmpp.atl.chat/fullchain.pem;
+        ssl_certificate_key /opt/xmpp.atl.chat/certs/live/xmpp.atl.chat/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS;
         ssl_prefer_server_ciphers off;
@@ -135,25 +127,6 @@ http {
             return 200 'XMPP Server - WebSocket endpoint: wss://xmpp.atl.chat/xmpp-websocket';
             add_header Content-Type text/plain;
         }
-    }
-
-    # Optional HTTPS server for atl.chat (if you also want to host at apex)
-    server {
-        listen 443 ssl http2;
-        listen [::]:443 ssl http2;
-        server_name atl.chat;
-
-        ssl_certificate /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem;
-        ssl_certificate_key /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS;
-        ssl_prefer_server_ciphers off;
-
-        # Optionally advertise endpoints here too (duplicate of xmpp.atl.chat)
-        location /xmpp-websocket { proxy_pass http://xmpp-prosody:5280/xmpp-websocket; proxy_http_version 1.1; proxy_set_header Connection "Upgrade"; proxy_set_header Upgrade $http_upgrade; proxy_set_header Host $host; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_read_timeout 900s; proxy_send_timeout 900s; proxy_buffering off; proxy_cache off; }
-        location /http-bind { proxy_pass http://xmpp-prosody:5280/http-bind; proxy_http_version 1.1; proxy_set_header Host $host; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_read_timeout 900s; proxy_send_timeout 900s; proxy_buffering off; proxy_cache off; }
-        location /upload { proxy_pass http://xmpp-prosody:5280/upload; proxy_http_version 1.1; proxy_set_header Host $host; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_read_timeout 300s; proxy_send_timeout 300s; client_max_body_size 100m; proxy_request_buffering off; proxy_buffering off; }
-        location / { return 200 'XMPP Server - WebSocket endpoint: wss://atl.chat/xmpp-websocket'; add_header Content-Type text/plain; }
     }
 }
 
