--- a/templates/configs/nginx/nginx-docker.conf.example
+++ b/templates/configs/nginx/nginx-docker.conf.example
@@ -12,8 +12,8 @@ http {
   server { listen 80; server_name xmpp.atl.chat; return 301 https://$host$request_uri; }
   server {
     listen 443 ssl http2; server_name xmpp.atl.chat;
-    ssl_certificate /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem;
-    ssl_certificate_key /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem;
+    ssl_certificate /opt/xmpp.atl.chat/certs/live/xmpp.atl.chat/fullchain.pem;
+    ssl_certificate_key /opt/xmpp.atl.chat/certs/live/xmpp.atl.chat/privkey.pem;
     location /xmpp-websocket { proxy_pass http://xmpp-prosody:5280/xmpp-websocket; proxy_http_version 1.1; proxy_set_header Connection "Upgrade"; proxy_set_header Upgrade $http_upgrade; proxy_set_header Host $host; }
     location /http-bind { proxy_pass http://xmpp-prosody:5280/http-bind; }
     location /upload { proxy_pass http://xmpp-prosody:5280/upload; client_max_body_size 100m; }
