--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -19,6 +19,10 @@ http {
     keepalive_timeout  65;
     types_hash_max_size 2048;
 
+    # Optional rate limiting zones (not enabled by default)
+    # limit_req_zone $binary_remote_addr zone=websocket:10m rate=10r/m;
+    # limit_req_zone $binary_remote_addr zone=general:10m rate=100r/m;
+
     # Redirect HTTP to HTTPS for xmpp.atl.chat
     server {
         listen 80;
@@ -110,6 +114,16 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # Static files (optional)
+        location /files {
+            proxy_pass http://xmpp-prosody:5280/files;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            expires 1h;
+            add_header Cache-Control "public, immutable";
         }
 
         # Health
